--- a/zdq.html
+++ b/zdq.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://www.acgmuse.com/assets/forum-b23888be.css">
-    <script src="d:\PROGRAM\js·html\je.js"></script>
+    <script src="/je.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>蔽夏转调器！</title>
