--- a/beat.html
+++ b/beat.html
@@ -26,7 +26,7 @@
     <textarea id="inje" style="width: 75%;height: 200px;"></textarea>
     <button onclick="starte();">开始</button>
     <button onclick="stope()">提前结束</button>
-    <a href="http://zhipu.lezhi99.com/Zhipu-index.html" target="_blank">前往生成mid</a>
+    <a href="https://madderscientist.github.io/je_score_operator/midi.html" target="_blank">前往生成mid</a>
     <pre id="pujia" style="font-size: 20px;"></pre>
 </body>
 <script>
