--- a/miditostr.html
+++ b/miditostr.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./je.js" type="text/javascript"></script>
+    <script src="./je.js"></script>
     <title>MIDI->je</title>
     <script>
         var songname = '';
@@ -78,9 +78,10 @@
 </head>
 
 <body>
-    <input type="file" id="ifs" accept=".mid" onchange="fstream(this.files[0]);"><br>
+    <input type="file" id="ifs" accept=".mid" onchange="fstream(this.files[0]);">
+    <input id='midix' type="checkbox">文件是midi0<br>
     <button onclick="startread(false);">转换为数字谱[分音轨]</button>
-    <button onclick="startread(true);">转换为数字谱[音轨合并]</button>
+    <button onclick="startread(true);">转换为数字谱[音轨合并]</button><br>
     <button onclick="outobj();">转换为音符列表</button>
     <button onclick="readmidistr(rawdata);">16进制解读</button>
     <button onclick="fq();">番茄简谱脚本(mid请尽可能规范)</button>
@@ -89,9 +90,14 @@
     <textarea id="out" style="width: 80%;height: 400px;margin: 10px 10% 0 10% ;" placeholder="输出"></textarea>
 </body>
 <script>
+    var ifcheck = false;
+    function reread(){
+        if(document.getElementById('midix').checked!=ifcheck) {mid='';ifcheck=document.getElementById('midix').checked;}
+        if (mid == '') mid = new MidiReader(rawdata,!ifcheck);
+    }
     function startread(ifmix) {
         if (rawdata.length > 4) {
-            if (mid == '') mid = new MidiReader(rawdata);
+            reread();
             let o = '';
             let mtrk = mid.MTrk;
             if (ifmix) {
@@ -112,7 +118,7 @@
     }
     function outobj() {
         if (rawdata.length > 4) {
-            if (mid == '') mid = new MidiReader(rawdata);
+            reread();
             let mtrk = mid.MTrk;
             let o = { "beat": [mid.bmp, 2, mid.beat[0], 2 ** mid.beat[1]], "notes": [] };
             for (let i = 0; i < mtrk.length; i++) {
@@ -123,7 +129,7 @@
     }
     function fq() {
         if (rawdata.length > 4) {
-            if (mid == '') mid = new MidiReader(rawdata);
+            reread();
             let Mlen = mid.MTrk.length;
             let outlist = [];
             let FQobj = new FQ(mid);
