--- a/zdq.html
+++ b/zdq.html
@@ -9,130 +9,178 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>蔽夏转调器！</title>
 </head>
+<style>
+    .tools{
+        margin: 2em auto;
+    }
+    @media screen and (max-width:700px) {
+        .tools{
+            width: 100%;
+        }        
+    }
+    @media screen and (min-width:701px) {
+        .tools{
+            width: 700px;
+        }        
+    }
+
+    .margin_btn{
+        margin: 2px 1em 2px 1em;
+    }
+    .center-div{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin: 1em auto;
+    }
+    .check{
+        display: flex;
+        align-items: center;
+        font-size: 15px;
+        margin: 0 1em;
+        color: rgb(102,124,153);
+    }
+    .upx{
+        margin: 3px;
+    }
+</style>
 
 <body>
+    <!-- 结果区 -->
     <div>
         <textarea onchange='printExtreme();' id="before" placeholder="这里输入je谱ˋ( ° ▽、° ) " class="FormControl"
             style="width: 90%;height: 300px;margin: 10px auto 20px auto;"></textarea>
         <p id="situation" style="text-align: center;">最高音：? 最低音：？</p>
     </div>
-    <!-- 升降多少 -->
-    <div style="display: flex;margin: 2em auto;width: 50%;">
-        <select id="updown" class="Select-input FormControl" style="margin: 5px;">
-            <option value="1" selected="selected">升</option>
-            <option value="-1">降</option>
-        </select>
-        <input id="howmany" placeholder="这里输入升/降多少半音" class="FormControl" style="margin: 5px;"
-            onkeyup="this.value=this.value.replace(/[^0-9]/g,'');"></input>
-        <button onclick="byNum();printExtreme();" class="Button Button--primary">转换！</button>
-    </div>
-    <!-- 按调性转 -->
-    <div style="display: flex;margin: 2em auto;width: 50%;">
-        <div style="margin-right: 1em;width: 100%;">
-            <span class="intro">转换前的调</span>
-            <select id="beforemode" class="Select-input FormControl">
-                <option value="0" selected="selected">1 = C</option>
-                <option value="1">1 = #C</option>
-                <option value="2">1 = D</option>
-                <option value="3">1 = #D</option>
-                <option value="4">1 = E</option>
-                <option value="5">1 = F</option>
-                <option value="6">1 = #F</option>
-                <option value="7">1 = G</option>
-                <option value="8">1 = #G</option>
-                <option value="9">1 = A</option>
-                <option value="10">1 = #A</option>
-                <option value="11">1 = B</option>
+    <div class="tools">
+        <!-- 升降多少 -->
+        <div class="center-div">
+            <select id="selectNote" class="Select-input FormControl" style="margin-right: 1em;">
+                <option value="-1" selected="selected">所有音</option>
+                <option value="0">所有do(不含#1)</option>
+                <option value="2">所有re</option>
+                <option value="4">所有mi</option>
+                <option value="5">所有fa</option>
+                <option value="7">所有so</option>
+                <option value="9">所有la</option>
+                <option value="11">所有si</option>
             </select>
-        </div>
-        <div style="margin-right: 1em;width: 100%;">
-            <span class="intro">转换后的调</span>
-            <select id="aftermode" class="Select-input FormControl">
-                <option value="0" selected="selected">1 = C</option>
-                <option value="1">1 = #C</option>
-                <option value="2">1 = D</option>
-                <option value="3">1 = #D</option>
-                <option value="4">1 = E</option>
-                <option value="5">1 = F</option>
-                <option value="6">1 = #F</option>
-                <option value="7">1 = G</option>
-                <option value="8">1 = #G</option>
-                <option value="9">1 = A</option>
-                <option value="10">1 = #A</option>
-                <option value="11">1 = B</option>
+            <select id="updown" class="Select-input FormControl" style="margin-right: 1em;">
+                <option value="1" selected="selected">升</option>
+                <option value="-1">降</option>
             </select>
+            <input id="howmany" placeholder="这里输入升/降多少半音" class="FormControl" style="margin-right: 1em;"
+                onkeyup="this.value=this.value.replace(/[^0-9]/g,'');"></input>
+            <button onclick="byNum();printExtreme();lessbrackets();" class="Button Button--primary">转换！</button>
         </div>
-        <button onclick="byTon();printExtreme();" class="Button Button--primary">转换！</button>
+        <!-- 按调性转 -->
+        <div class="center-div">
+            <div style="margin-right: 1em;width: 100%;">
+                <span class="intro">转换前的调</span>
+                <select id="beforemode" class="Select-input FormControl">
+                    <option value="0" selected="selected">1 = C</option>
+                    <option value="1">1 = #C</option>
+                    <option value="2">1 = D</option>
+                    <option value="3">1 = #D</option>
+                    <option value="4">1 = E</option>
+                    <option value="5">1 = F</option>
+                    <option value="6">1 = #F</option>
+                    <option value="7">1 = G</option>
+                    <option value="8">1 = #G</option>
+                    <option value="9">1 = A</option>
+                    <option value="10">1 = #A</option>
+                    <option value="11">1 = B</option>
+                </select>
+            </div>
+            <div style="margin-right: 1em;width: 100%;">
+                <span class="intro">转换后的调</span>
+                <select id="aftermode" class="Select-input FormControl">
+                    <option value="0" selected="selected">1 = C</option>
+                    <option value="1">1 = #C</option>
+                    <option value="2">1 = D</option>
+                    <option value="3">1 = #D</option>
+                    <option value="4">1 = E</option>
+                    <option value="5">1 = F</option>
+                    <option value="6">1 = #F</option>
+                    <option value="7">1 = G</option>
+                    <option value="8">1 = #G</option>
+                    <option value="9">1 = A</option>
+                    <option value="10">1 = #A</option>
+                    <option value="11">1 = B</option>
+                </select>
+            </div>
+            <button onclick="byTon();printExtreme();lessbrackets();" class="Button Button--primary">转换！</button>
+        </div>
+        <!-- 最音转换 -->
+        <div class="center-div">
+            <select id='extremeMode' class="Select-input FormControl">
+                <option value="0">最低音</option>
+                <option value="1">最高音</option>
+            </select>
+            <span style="font-size: 1.6em; margin: auto 0.5em;">为</span>
+            <input id="target" placeholder="请按je谱格式输入目标音" class="FormControl" style="margin-right: 1em;"></input>
+            <button onclick='toExtreme();printExtreme();' class="Button Button--primary">转换！</button>
+        </div>
+        <!-- 其他工具 -->
+        <div class="center-div">
+            <button onclick="bShow();printExtreme();lessbrackets();" class="Button Button--primary margin_btn">1=#C记谱</button>
+            <button onclick="toMin();printExtreme();lessbrackets();" class="Button Button--primary margin_btn">一键最简</button>
+            <div class="check"><input class="upx" type="checkbox" onchange="Note_aft[5] = this.checked?'#3':'4'">4->#3</div>
+            <div class="check"><input class='upx' type="checkbox" onchange="Note_aft[0] = this.checked?'(#7)':'1'">[1]->#7</div>
+            <div class="check"><input class='upx' type="checkbox" id="lessbrackets" checked="true">更少的括号</div>
+        </div>
     </div>
-    <!-- 最音转换 -->
-    <div style="display: flex;margin: 2em auto;width: 50%;">
-        <select id='extremeMode' class="Select-input FormControl">
-            <option value="0">最低音</option>
-            <option value="1">最高音</option>
-        </select>
-        <span style="font-size: 1.6em;">为</span>
-        <input id="target" placeholder="请按je谱格式输入目标音" class="FormControl"></input>
-        <button onclick='toExtreme();printExtreme();' class="Button Button--primary">转换！</button>
-    </div>
-    <div style="display: flex;justify-content: space-evenly;">
-        <button onclick="bShow();printExtreme();" class="Button Button--primary">1=#C记谱</button>
-        <button onclick="toMin();printExtreme();" class="Button Button--primary">一键最简</button>
-        <button onclick="up3();" class="Button Button--primary">#3</button>
-        <button onclick="up7();" class="Button Button--primary">#7</button>
-    </div>
-
-    <script>
-        function byNum() {
-            let x = document.getElementById("howmany").value;
-            x = Number(x) * document.getElementById("updown").value;
-            document.getElementById("before").value = Convert(document.getElementById("before").value, x);
-        }
-        function toMin() {
-            document.getElementById("before").value = simplified(document.getElementById("before").value);
-        }
-        function byTon() {
-            let x = document.getElementById("aftermode").value - document.getElementById("beforemode").value;
-            if (x < -5.5) x += 12;
-            else if (x > 6.5) x = x - 12;
-            document.getElementById("before").value = Convert(document.getElementById("before").value, x);
-        }
-        function bShow() {
-            let x = Convert(document.getElementById("before").value, -1);
-            var a = ['#1', '#2', '#4', '#5', '#6'];
-            var b = ['b2', 'b3', 'b5', 'b6', 'b7'];
-            for (let i = 0; i < 5; i++) {
-                x = x.replace(new RegExp(a[i], 'gm'), b[i]);
-            }
-            document.getElementById("before").value = x;
-        }
-        function toExtreme() {
-            let y = findExtreme(document.getElementById("target").value)[document.getElementById("extremeMode").value];
-            if (y == 0.1) alert("请按je谱格式输入！");
-            else {
-                let x = findExtreme(document.getElementById("before").value)[document.getElementById("extremeMode").value];
-                document.getElementById("before").value = Convert(document.getElementById("before").value, y - x);
-            }
-        }
-        function printExtreme() {
-            let x = findExtreme(document.getElementById("before").value);
-            document.getElementById("situation").innerHTML = "最低音：" + indexToje(x[0]) + "   最高音：" + indexToje(x[1]);
-        }
-        function up3() {
-            //先covert0是为了拆括号，防止最后一步消括号出现只消一边的问题
-            document.getElementById("before").value = Convert(document.getElementById("before").value, 0)
-                .replace(/#4/g, "ᗢ")
-                .replace(/4/g, "#3")
-                .replace(/ᗢ/g, "#4")
-                .replace(/\[\(/g, '').replace(/\)\]/g, '');
-        }
-        function up7() {
-            document.getElementById("before").value = Convert(document.getElementById("before").value, 0)
-                .replace(/#1/g, "ᗢ")
-                .replace(/1/g, "(#7)")
-                .replace(/ᗢ/g, "#1")
-                .replace(/\[\(/g, '').replace(/\)\]/g, '');
-        }
-    </script>
 </body>
+<script>
+    let Note_aft = [...note];       // 转换后每个音怎么显示
+    function byNum() {
+        let x = document.getElementById("howmany").value;
+        x = Number(x) * document.getElementById("updown").value;
+        let n = document.getElementById('selectNote').value;
+        if(n>=0){
+            let tempnote = [...Note_aft]
+            tempnote[n] = Convert(tempnote[n], x);
+            document.getElementById("before").value = Convert(document.getElementById("before").value, 0, tempnote);
+        }else{
+            document.getElementById("before").value = Convert(document.getElementById("before").value, x, Note_aft);
+        }
+    }
+    function toMin() {
+        document.getElementById("before").value = simplified(document.getElementById("before").value);
+    }
+    function byTon() {
+        let x = document.getElementById("aftermode").value - document.getElementById("beforemode").value;
+        if (x < -5.5) x += 12;
+        else if (x > 6.5) x = x - 12;
+        document.getElementById("before").value = Convert(document.getElementById("before").value, x, Note_aft);
+    }
+    function bShow() {
+        let x = Convert(document.getElementById("before").value, -1);
+        var a = ['#1', '#2', '#4', '#5', '#6'];
+        var b = ['b2', 'b3', 'b5', 'b6', 'b7'];
+        for (let i = 0; i < 5; i++) {
+            x = x.replace(new RegExp(a[i], 'gm'), b[i]);
+        }
+        document.getElementById("before").value = x;
+    }
+    function toExtreme() {
+        let y = findExtreme(document.getElementById("target").value)[document.getElementById("extremeMode").value];
+        if (y == 0.1) alert("请按je谱格式输入！");
+        else {
+            let x = findExtreme(document.getElementById("before").value)[document.getElementById("extremeMode").value];
+            document.getElementById("before").value = Convert(document.getElementById("before").value, y - x, Note_aft);
+        }
+    }
+    function printExtreme() {
+        let x = findExtreme(document.getElementById("before").value);
+        document.getElementById("situation").innerHTML = "最低音：" + indexToje(x[0]) + "   最高音：" + indexToje(x[1]);
+    }
+    function lessbrackets(){
+        let dom = document.getElementById("before");
+        dom.value = dom.value.replace(/\[\(/g, '').replace(/\)\]/g, '');
+        if(document.getElementById('lessbrackets').checked)
+            dom.value = dom.value.replace(/\]\[/g,'').replace(/\)\(/g,'').replace(/\]\[/g,'').replace(/\)\(/g,'')
+    }
+</script>
 
 </html>
